--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
     <form id="image-loader-form" action="#" method="POST">
       <div class="image-loader-input">
-        <label for=""></label>
-        <input />
+        <label for="url">URL:</label>
+        <input name="url" type="text" placeholder="https://" />
       </div>
 
       <div class="image-loader-input">
-        <label for=""></label>
-        <input />
+        <label for="color">Color:</label>
+        <input name="color" type="color" />
       </div>
 
       <div class="image-loader-input">
-        <label for=""></label>
-        <input />
+        <label for="width">Width:</label>
+        <input name="width" type="text" placeholder="Enter width (px)" />
       </div>
     </form>
 
