--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Framed image loader</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="./src/styles.css" />
   </head>
 
   <body>
